<resources>
  <string name="app_name">FindNDine</string>
  <string name="title_activity_navigation">NavigationActivity</string>
  <string name="menu_title_home">Home</string>
  <string name="menu_title_favorites">Favorites</string>
  <string name="menu_title_search">Search</string>
  <string name="menu_logout_text">Logout</string>

  <!-- Activity_Customize_Page-->
  <string name="state_spinner_title">State</string>
  <string name="favorite1_spinner_title">Favorite 1</string>
  <string name="favorite2_spinner_title">Favorite 2</string>
  <string name="favorite3_spinner_title">Favorite 3</string>
  <string name="change_background_text">Change Background</string>
  <string name="city_edittext_hint">City</string>
  <string name="name_edittext_hint">Name</string>
  <string name="change_photo_content_description">Change Profile Image</string>
  <string name="update_profile_button_text">Update Profile</string>
  <string name="rotate_button_content_description">Rotate Photo</string>
  <string name="photo_button_content_description">Take Photo</string>

  <!-- Activity_Detail_Restaurant-->
  <string name="detail_restaurant_distance_title">Distance: </string>
  <string name="detail_restaurant_price_title">Price: </string>
  <string name="detail_restuarant_direction_button_text">Directions</string>

  <!-- Activity_Detail_Category_Favorite-->
  <string name="favorite_fab_content_description">Favorite</string>
  <string name="review_tab_title">Reviews</string>
  <string name="photo_tab_title">Photos</string>

  <!-- Activity_Main-->
  <string name="email_hint_text">Email</string>
  <string name="password_hint_text">Password</string>
  <string name="login_button_text">Login</string>
  <string name="signup_button_text">Sign Up</string>
  <string name="or_text">Or</string>
  <string name="login_with_text">Login With</string>
  <string name="main_google_text">Google</string>
  <string name="main_facebook_text">Facebook</string>
  <string name="main_twitter_text">Twitter</string>

  <!-- Activity_Search_Results-->
  <string name="activity_search_results_no_results_test">No Results Found</string>

  <!-- Activity_Sign_Up-->
  <string name="sign_up_username_hint">Username</string>
  <string name="sign_up_email_hint">Email</string>
  <string name="sign_up_password_hint">Password</string>
  <string name="sign_up_confirm_password">Confirm Password</string>
  <string name="sign_up_button_text">Sign Up</string>
  <string name="sign_text">Sign Up </string>
  <string name="sign_up_google_text">Google</string>
  <string name="sign_up_facebook_text">Facebook</string>
  <string name="sign_up_twitter_text">Twitter</string>

  <!-- Customize_Page_Dialog-->
  <string name="dialog_change_background_title_text">Change Photo</string>
  <string name="take_photo_text">Take Photo</string>
  <string name="choose_photo_text">Choose Photo</string>
  <string name="customize_dialog_cancel_button_text">Cancel</string>
  <string name="choose_color_text">Choose Color</string>
  <string name="choose_background_text">Choose Background</string>
  <string name="change_background_title_text">Change Background</string>

  <!-- Fragment_Home_Page-->
  <string name="fragment_home_option_menu_content_description">Option Menu</string>>
  <string name="fragment_home_favorite_text">Favorite</string>
  <string name="fragment_home_recents_text">Recently Viewed</string>
  <string name="edit_profile_fab_content_description">Edit Profile</string>
  <string name="add_fab_content_description">Add Category</string>
  <string name="search_fab_content_description">Search</string>

  <!-- Fragment_Favorite_Category_List-->
  <string name="favorite_category_toolbar_title">Favorites</string>>

  <!-- Fragment_Search-->
  <string name="choose_one_button_text">Choose One</string>
  <string name="choose_many_button_text">Choose Many</string>
  <string name="sort_by_title_text">Sort By</string>
  <string name="distance_title_text">Distance</string>
  <string name="price_title_text">Price</string>
  <string name="rating_title_text">Rating</string>
  <string name="sort_by_any_text">Any</string>
  <string name="sort_by_distance_text">Distance</string>
  <string name="sort_by_rating_text">Rating</string>
  <string name="sort_price_text">Price</string>
  <string name="five_mile_distance">5 mi</string>
  <string name="ten_mile_distance">10 mi</string>
  <string name="fifteen_mile_distance">15 mi</string>
  <string name="twenty_mile_distance">20 mi</string>
  <string name="twenty_five_plus_mile_distance">25 mi +</string>
  <string name="one_dollar_sign">$</string>
  <string name="two_dollar_sign">$$</string>
  <string name="three_dollar_sign">$$$</string>
  <string name="four_dollar_sign">$$$$</string>
  <string name="one_rating">1.0</string>
  <string name="two_rating">2.0</string>
  <string name="three_rating">3.0</string>
  <string name="four_rating">4.0</string>
  <string name="search_bar_hint_text">Restaurant Type</string>

  <!-- Restaurant_Item-->
  <string name="restaurant_item_price_title_text">Price</string>

  <!-- Restaurant_Category_Dialog-->
  <string name="restaurant_category_dialog_title">Create New Category</string>
  <string name="title_edit_text_hint">Title</string>
  <string name="restaurant_category_dialog_cancel_button_text">Cancel</string>
  <string name="restaurant_category_dialog_ok_button_text">OK</string>

  <!-- Select_Favorite_Dialog-->
  <string name="favorite_dialog_title">Add to Favorites</string>
  <string name="favorite_dialog_ok_button">OK</string>

  <!-- Widget-->
  <string name="ratings_widget_item_label"> Rating:  </string>
  <string name="price_widget_item_label"> Price:  </string>
  <string name="add_widget">Add widget</string>

  <!--Log_Out_Dialog-->
  <string name="log_out_dialog_title">Log Out</string>
  <string name="log_out_dialog_message">Are you sure you want to logout?</string>
  <string name="log_out_dialog_yes">Yes</string>
  <string name="log_out_dialog_no">No</string>

</resources>
